 * fixed crash when playing a DVD from different region than currently set
   in the DVD drive
 * fixed segfaults when reading certain DVDs (including "Jack Reacher",
   "Ghost Protocol", "Inside Man", "The Dictator" and "Tangled")
 * fixed numerous crashes, assertions and corruptions
 * rewrite of the build-system
 * clean code, simplify and remove warnings

libdvdnav (4.2.0)
  * OS/2 support
  * added dvdnav_get_serial_string() function
  * fixed ifo leak in dvdnav_describe_chapters()
  * added dvdnav_get_video_resolution() to retrieve video resolution
  * added dvdnav_program_play() & dvdnav_current_title_program() for
    more reliable playback
  * fixed deadlock between dvdnav_reset() and dvd_clear()
  * fixed pthread_mutex_destroy macro for Win32
  * fixed numerous assertion failures occuring when playing DVDs with
    new "copy protection" schemes
  * fixed forward seeks to always move forward

libdvdnav (4.1.3)
  * an embarassing amount of fixes regarding potential memory and resource leaks
    (patches contributed by Erik Hovland)
  * added dvdread-config (dvdnav-config's younger brother)
  * added pkg-config support
  * split dvdread to a separate tree; now you need to check it out
    and install it before building libdvdnav.
    In order to configure libdvdnav We need the executable dvdread-config
    somewhere in the PATH or explicitly specified to configure[2] with
    --with-dvdread-config=~/bin/dvdread-config

libdvdnav (4.1.2)
  * multiple build system fixes
  * added dvdnav_describe_title_chapters(title) to get title and chapters
    duration

libdvdnav (4.1.1)
  * added dvdnav_audio_stream_channels() to return number of channels
  * fixed dvdnav_time_search() in multi-angle dvds (but it still needs
    improvements)
  * added dvdnav_audio_stream_format() to identify the codec used
    in audio streams
  * starting DVD playback at specific title/part positions with
    dvdnav_{title,part}_play() works again