@@ -23,8 +23,6 @@
 #ifndef LIBDVDNAV_VM_H
 #define LIBDVDNAV_VM_H
 
-#include "remap.h"
-
 /**
  * State: SPRM, GPRM, Domain, pgc, pgN, cellN, ?
  */
@@ -76,7 +74,6 @@ typedef struct {
   int32_t       hop_channel;
   char          dvd_name[50];
   char          dvd_serial[15];
-  remap_t      *map;
   int           stopped;
 } vm_t;
 
